--- a/source/stylesheets/components/_cards.scss
+++ b/source/stylesheets/components/_cards.scss
@@ -13,6 +13,12 @@
   flex-direction: column;
   align-items: center;
   position: relative;
+  border-radius: 5px;
+  &:hover {
+    .external-link {
+      opacity: 1;
+    }
+  }
 }
 
 .card-product img {
@@ -38,11 +44,6 @@
 .card-product .card-product-infos {
   padding: 16px;
   position: relative;
-  &:hover {
-    .external-link {
-      opacity: 1;
-    }
-  }
 }
 
 .card-links {
