added profile pic. Adjustments made to size of profile pic. About me data updated.

--- a/source/partials/banner.html.erb
+++ b/source/partials/banner.html.erb
@@ -1,6 +1,6 @@
-<div class="row justify-content-center banner">
+<div class="row justify-content-center banner h-100 mt-5">
   <div class="col-12 d-flex flex-column justify-content-center align-items-center h-100">
-    <%= image_tag 'placeholder.png', alt: "profile photo", class: 'avatar' %>
-    <h1 class="title-main">Portfolio</h1>
+    <%= image_tag 'profile_pic.jpeg', alt: "profile photo", class: 'avatar' %>
+    <h1 class="title-main">Steven Reyes</h1>
   </div>
 </div>
