--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -3,7 +3,8 @@
     <div class="container">
       <div id="about">
         <h2>About</h2>
-        <p>I'm Steven....</p>
+        <p>Hey! I'm Steven. Thanks for taking a look at my portfolio.</p>
+        <p>I'm a full-stack web developer that recently studied at Le Wagon - Tokyo.</p>
       </div>
     </div>
   </div>
