updated about me

--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -1,11 +1,13 @@
 <div class="row my-5">
-  <div class="col-12">
-    <div class="container">
-      <div id="about">
-        <h2>About</h2>
-        <p>Hey! I'm Steven. Thanks for taking a look at my portfolio.</p>
-        <p>I'm a full-stack web developer that recently studied at Le Wagon - Tokyo.</p>
-      </div>
-    </div>
-  </div>
+	<div class="col-12">
+		<div class="container">
+			<div id="about">
+				<h2>About</h2>
+				<p>Hey! I'm Steven. Thanks for taking a look at my portfolio.</p>
+				<p>I'm a full-stack web developer that recently studied at Le Wagon - Tokyo in 2024.</p>
+				<p>At Le Wagon, I was able to learn the fundamentals of web design. There, I worked mainly with Ruby on Rails and javascript.</p>
+				<p>Since graduating, I have been studying React.</p>
+			</div>
+		</div>
+	</div>
 </div>
