--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -2,7 +2,7 @@
 	<div class="col-12">
 		<div class="container">
 			<div id="about">
-				<h2>About</h2>
+				<h2 id="about-title">About</h2>
 				<p>Hey! I'm Steven. Thanks for taking a look at my portfolio.</p>
 				<p>I'm a full-stack web developer that recently studied at Le Wagon - Tokyo in 2024.</p>
 				<p>At Le Wagon, I was able to learn the fundamentals of web design. There, I worked mainly with Ruby on Rails and javascript.</p>
